--- a/ggg.html
+++ b/ggg.html
@@ -16,7 +16,7 @@
       <section class="writer">
         <div class="box-container">
           <div class="box">
-            <img src="6.jpg" alt="" />
+            <img src="New folder/6.jpg" alt="" />
             <h3>قسمت جهارم </h3>
               <from class="m">
               <a href="move.html"> <input type="button" value="تماشای فیلم"></a>               
@@ -40,7 +40,7 @@
             </div>
           </div>
           <div class="box">
-            <img src="7.jpg" alt="" />
+            <img src="New folder/7.jpg" alt="" />
           <h3> قسمت پنجم</h3>
              
           <from class="m">
@@ -65,7 +65,7 @@
             </div>
           </div>
           <div class="box">
-            <img src="8.jpg" alt="" />
+            <img src="New folder/8.jpg" alt="" />
             <h3>قسمت ششم</h3><br>
             
           <from class="m">
