--- a/move.html
+++ b/move.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html >
-<head>
+<html>
+<head> 
     <meta;charset=UTF-8">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -8,7 +8,7 @@
 <section class="move">
 <div class="phto>">
     <div class="ph">
-        <img class="q" src="1.jpg" alt="">
+        <img class="q" src="New folder/1.jpg" alt="">
         <h3>فیلم</h3>
         
         <from class="">
