--- a/film.html
+++ b/film.html
@@ -5,7 +5,7 @@
     </head>
     <body class="r">
         
-    <video controls src="New folder/8.mp4"></video>
+    <video controls src="/8.mp4"></video>
         <footer class="z" >
             <p>سال ساخت 
               2001
