--- a/serwess.html
+++ b/serwess.html
@@ -29,12 +29,12 @@
             <a class="nav-link" href="index.html">صفحه اصلی</a>
             </li>
              <li class="nav-item">
-                <a class="nav-link" href="index.html">پایتخت</a> 
+                <a class="nav-link" href="about.html">پایتخت</a> 
              </li>
               <li class="nav-item">
- <a class="nav-link" href="index.html">آثار باستانی</a>
+ <a class="nav-link" href="serwess.html">آثار باستانی</a>
  </li> <li class="nav-item">
-   <a class="nav-link" href="index.html">نقشه افغانستان </a>
+   <a class="nav-link" href="contact.html">نقشه افغانستان </a>
    </li>
     </ul>
     </div>
